--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Advanced Driving Game</title>
-  <link rel="stylesheet" href="game.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="gameArea">
@@ -23,4 +23,5 @@
 
   <script src="game.js"></script>
 </body>
+
 </html>
