--- a/game.html
+++ b/game.html
@@ -21,7 +21,8 @@
     <button onclick="restartGame()">Play Again</button>
   </div>
 
-  <script src="game.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
+
