--- a/index.html
+++ b/index.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Advanced Driving Game</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="gameArea">
-    <div id="score">Score: 0</div>
-    <div id="playerCar"></div>
-    <!-- Touch Controls -->
-    <div id="touchControls">
-      <button id="leftBtn">⟵</button>
-      <button id="rightBtn">⟶</button>
-    </div>
-  </div>
-
-  <div id="gameOver">
-    <h1>Game Over!</h1>
-    <button onclick="restartGame()">Play Again</button>
-  </div>
-
-  <script src="script.js"></script>
+    <h1>
+        MY NAME IS JOHN
+    </h1>
+    <ul>
+        <li>orange</li>
+        <li>mango</li>
+        <li>pear</li>
+    </ul>
+    <ol>
+        <li>orange</li>
+        <li>mango</li>
+        <li>pear</li>
+    </ol>
+    <img src="Untitled2.png" alt="image 2">
+    <form>
+        <input type="text" placeholder="firstname">
+        <input type="text" placeholder="lastname">
+        <input type="text" placeholder="email address">
+        <input type="text" placeholder="password">
+        <button>LOGIN
+    </button>
+    </form>
+    <img src="Untitled3.png" alt="image 3">
+        <form>
+        <input type="text" placeholder="firstname">
+        <input type="text" placeholder="lastname">
+        <input type="text" placeholder="email address">
+        <input type="text" placeholder="password">
+    </form>
+    <img src="Untitled4.png" alt="image 4">
+        <form>
+        <input type="text" placeholder="firstname">
+        <input type="text" placeholder="lastname">
+        <input type="text" placeholder="email address">
+        <input type="text" placeholder="password">
+    </form>
+    <img src="Untitled5.png" alt="image 5">
+        <form>
+        <input type="text" placeholder="firstname">
+        <input type="text" placeholder="lastname">
+        <input type="text" placeholder="email address">
+        <input type="text" placeholder="password">
+    </form>
+  
 </body>
-
 </html>
+
 
