--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <button onclick="restartGame()">Play Again</button>
     </div>
   </div>
-  <script src="game.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
