--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Anniversary!</title>
-  <link rel="icon" href="downloads.png" type="image/png">
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <title>Happy 2 Months Anniversary!</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="gameContainer">
-    <canvas id="gameCanvas" width="800" height="400"></canvas>
-    <div id="message" class="hidden">
-      <h1>Happy Anniversary Demilade, I love you ❤️</h1>
-      <button onclick="restartGame()">Play Again</button>
-    </div>
-  </div>
+  <div id="timer">❤️ Together for: <span id="timeTogether"></span></div>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <div id="message"></div>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
